--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -14,12 +14,13 @@ main {
 .welcome-section {
   flex-flow: row wrap;
   width: 100vw;
+  overflow: visible;
 }
 #welcome-banner-container {
   position: relative;
-  width: 95vw;
-  height: calc(95vw * .5);
-  margin: 10px auto;
+  width: 90vw;
+  height: calc(90vw * .5);
+  margin: 20px 5vw;
   min-width: 350px;
   border-radius: 5px;
   box-shadow: 1 0 20px 1px var(--box-shadow-animation-color);
@@ -36,19 +37,19 @@ main {
   border-radius: 5px;
   background-image: url("../assets/images/resonance-reflections_banner.webp");
   background-repeat: no-repeat;
-  background-size: 95vw calc(95vw * 0.5);
+  background-size: 90vw calc(90vw * 0.5);
 }
 #welcome-banner_image {
   position: absolute;
   background: url("../assets/images/resonance-reflections_banner-turbulance.webp");
   background-repeat: no-repeat;
-  background-size: 95vw calc(95vw * 0.5);
+  background-size: 90vw calc(90vw * 0.5);
   border-radius: 5px;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100%;
-  filter: url("#turbulence");
+  /* filter: url("#turbulence"); */
 }
 @keyframes pulse {
   0% {
@@ -81,7 +82,7 @@ main {
 }
 
 #welcome-banner:hover {
-  animation: glow-grow 600ms linear both;
+  animation: glow-grow 1000ms linear both;
 }
 @keyframes glow-grow {
   from {
@@ -89,8 +90,8 @@ main {
   transform: scale(1);
 }
   to {
-    box-shadow: 0 0 30px 5px rgb(252, 254, 255);
-    transform: scale(1.02);
+    box-shadow: 0 0 30px 30px rgb(252, 254, 255);
+    transform: scale(1.01);
 
   }
 }
